# queria

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  ducklake_patch.py  index.html  mkdocs.yml  pyproject.toml
adding-dataset/: index.html
cli/: index.html
datasets/bodik/: dataset.yml  pyproject.toml
datasets/bodik/ingestion/: __main__.py  resources.yml
datasets/bodik/transform/: dbt_project.yml  profiles.yml
datasets/bodik/transform/models/bodik/raw/: _schema.yml  _sources.yml  raw_kushima_population.sql  raw_nago_population.sql
datasets/e_stat/: README.md  dataset.yml  pipeline.py  profiles.yml  pyproject.toml  tables.yml
datasets/e_stat/ingestion/: __main__.py  boundary.py  pipeline.py  tables.yml
datasets/e_stat/models/e_stat/mart/municipal/: municipal_economy.sql  municipal_education.sql  municipal_housing.sql  municipal_labor.sql  municipal_land.sql  municipal_safety.sql  municipal_welfare.sql
datasets/e_stat/models/e_stat/mart/pref/: pref_administration.sql  pref_economy.sql  pref_health.sql  pref_housing.sql  pref_land.sql  pref_welfare.sql
datasets/e_stat/models/e_stat/raw/: _sources.yml  raw_municipal_administration.sql  raw_municipal_culture.sql  raw_municipal_education.sql  raw_municipal_health.sql  raw_municipal_housing.sql  raw_municipal_land.sql  raw_municipal_population.sql  raw_municipal_safety.sql  raw_municipal_welfare.sql  raw_pref_economy.sql  raw_pref_education.sql  raw_pref_housing.sql  raw_pref_land.sql  raw_pref_population.sql  raw_pref_welfare.sql
datasets/e_stat/tests/: test_ducklake_patch.py
datasets/e_stat/transform/: dbt_project.yml  profiles.yml
datasets/e_stat/transform/macros/: e_stat_category_view.sql  estat_category_view.sql
datasets/e_stat/transform/models/boundary/mart/: _schema.yml  boundary_small_area.sql
datasets/e_stat/transform/models/boundary/raw/: _schema.yml  raw_boundary_small_area.sql
datasets/e_stat/transform/models/boundary/stg/: stg_boundary_small_area.sql
datasets/e_stat/transform/models/e_stat/mart/municipal/: municipal_administration.sql  municipal_culture.sql  municipal_health.sql  municipal_population.sql
datasets/e_stat/transform/models/e_stat/mart/pref/: pref_culture.sql  pref_education.sql  pref_labor.sql  pref_population.sql  pref_safety.sql
datasets/e_stat/transform/models/e_stat/raw/: _schema.yml  raw_municipal_economy.sql  raw_municipal_labor.sql  raw_pref_administration.sql  raw_pref_culture.sql  raw_pref_health.sql  raw_pref_labor.sql  raw_pref_safety.sql
datasets/e_stat/transform/models/main/mart/: mart_estat_data_catalog.sql
datasets/e_stat/transform/models/main/mart/municipal/: municipal_administration.sql  municipal_culture.sql  municipal_housing.sql  municipal_labor.sql  municipal_safety.sql
datasets/e_stat/transform/models/main/mart/pref/: _schema.yml  pref_administration.sql  pref_culture.sql  pref_education.sql  pref_health.sql  pref_safety.sql  pref_welfare.sql
datasets/e_stat/transform/models/main/raw/: _schema.yml  raw_social_demographic_municipal_basic.sql  raw_social_demographic_pref_basic.sql
datasets/e_stat/transform/models/mart/: estat_items.yml  mart_estat_api_catalog.yml  mart_estat_data_catalog.yml  mart_social_demographic_municipal_basic.yml  mart_social_demographic_pref_basic.yml
datasets/e_stat/transform/models/mart/municipal/: _schema.yml  municipal_health.sql  municipal_land.sql
datasets/e_stat/transform/models/mart/pref/: _schema.yml
datasets/e_stat/transform/models/raw/: raw_estat_data_catalog.sql
docs/: adding-dataset.md  catalog-spec.md  cli.md  ducklake-unification-context.md  getting-started.md  index.md  (+3 more)
(+274 files in other folders)
