[project]
name = "queria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35",
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/queria"]

[dependency-groups]
docs = ["mkdocs-material>=9"]

[project.scripts]
queria = "queria.cli:main"
